# consulting-agent-crew

./: README.md  crew.py  main.py  pyproject.toml
config/: agents.yaml  tasks.yaml
knowledge/: README.md  company_capabilities.md  company_overview.md  company_strategy.md
