[project]
name = "consulting-agent-crew"
version = "0.1.0"
description = "DeepAgent-grade consulting crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.0"
]

[project.scripts]
consulting_agent_crew = "main:run"
run_crew = "main:run"
train = "main:train"
replay = "main:replay"
test = "main:test"
run_with_trigger = "main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
